# back-end

salnutrition/: manage.py
salnutrition/salnutrition/: asgi.py  settings.py  urls.py  wsgi.py
salnutrition_back_end/: pyproject.toml
salnutrition_back_end/config/: settings.py  urls.py
salnutrition_back_end/measurements/: models.py  serializers.py  views.py
salnutrition_back_end/measurements/migrations/: 0001_initial.py  0002_add_initial_data.py
salnutrition_back_end/users/: models.py  serializers.py  urls.py  views.py
salnutrition_back_end/users/migrations/: 0001_initial.py
